Refactor codebase to enhance type safety and stability, switch slf4j-log4j12 dependency to slf4j-reload4j, and suppress warnings in multiple modules.